--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.example</groupId>
     <artifactId>crud_academia</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Archetype - crud_academia</name>
-    <url>http://maven.apache.org</url>
-
+    <name>crud_academia</name>
+    <url>http://example.com</url>
 
     <dependencies>
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -39,14 +37,15 @@
             <artifactId>caelum-stella-hibernate-user-types</artifactId>
             <version>2.1.2</version>
         </dependency>
-
-
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!-- Versão do plugin do compilador Maven -->
+                <version>3.13.0</version>
                 <configuration>
                     <source>16</source>
                     <target>16</target>
